# django-conditions

./: pyproject.toml
conditions/: fields.py
conditions/templates/conditions/: conditions_widget.html
