[tool.poetry]
name = "django-conditions"
version = "0.9.19"
description = "A Django app that allows creation of conditional logic in admin."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"
packages = [
    { include = "conditions" },
]
readme = "README.md"
repository = "https://github.com/RevolutionTech/django-conditions"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=4.0"

[tool.poetry.dev-dependencies]
opstrich = "^0.3.0"
typed-ast = ">=1.4.3"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py37", "py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
